CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.20

	- The scheduler did not support job IDs higher than
	  99999 (STR #371)
	- The Visual C++ project files did not work (STR #366)
	- The scheduler's cupsLangSeek() function did not reset
	  the "EOF" flag, preventing compressed files from being
	  typed properly in some cases (STR #368)
	- The cupsLangGet() cache was only used if the locale
	  name provided an explicit character set name (STR
	  #354)
	- The CUPS API convenience functions did not call
	  cupsLangFree() when they were done with the
	  localization data (STR #354)
	- The scheduler did not return the
	  job-hold-until-supported or job-hold-until-default
	  attributes (STR #356)
	- The cupsaddsmb program did not support the new CUPS
	  driver for Windows (STR #357)


CHANGES IN CUPS V1.1.20rc5

	- The scheduler did not initialize the browse socket
	  file descriptor properly when only SLP browsing was
	  enabled (STR #259)
	- The scheduler accessed the job attributes before they
	  were set (STR #347, fix to STR #335)
	- The cupsCancelJob() function did not return 0 when the
	  job could not be canceled (STR #340)


CHANGES IN CUPS V1.1.20rc4

	- The scheduler did not move the incoming job attributes
	  in the operation group to the job group (STR #335)
	- The cupsDoFileRequest() function did not check for an
	  early HTTP response while sending the file (STR #314)
	- The web interfaces did not quote #, ?, or . in printer
	  names, which caused some problems with the generated
	  URLs (STR #320)
	- CUPS couldn't be completely compiled with the -dDEBUG
	  option (STR #331)


CHANGES IN CUPS V1.1.20rc3

	- More SLP changes (STR #259)
	- Revamped the child signal handling code to completely
	  avoid deadlock issues on Solaris (STR #325)
	- The lpadmin command displayed an incorrect error
	  message when the "-u" option was provided with no
	  arguments (STR #313)
	- The web admin interface did not display an error