@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.20
 
+	- The Dymo label printer driver did not set the label
+	  length properly (STR #373)
 	- The scheduler did not support job IDs higher than
 	  99999 (STR #371)
 	- The Visual C++ project files did not work (STR #366)
